Spend edit started

--- a/src/app/components/add-spend/add-spend.component.html
+++ b/src/app/components/add-spend/add-spend.component.html
@@ -44,7 +44,9 @@
 
 </form>
   <div class="add-categories">
-    <h3>Add your own categories!</h3>
+    <div class="add-categories__text">
+      <h3>Add your own categories!</h3>
+    </div>
     <div class="add-categories__container">
       <input type="text" class="add-spend__form__input-text"  placeholder="Add further categories!" id="addedCategory" [(ngModel)]="addedCategory">
       
