--- a/src/app/components/add-spend/add-spend.component.scss
+++ b/src/app/components/add-spend/add-spend.component.scss
@@ -59,18 +59,13 @@
         background-color: white;
         margin: 1rem 0;
         padding: 0rem 2rem;
-        font-size: 2rem;
+        font-size: 2.2rem;
         justify-content: space-between;
         align-items: center;
-
+        text-transform: uppercase;
       }
         &__field{
           
-          background-color: red;
-          color: red;
-          input[type="radio"]{
-            color: red;
-          }
         }
         &__image{
         margin: 1rem;
@@ -121,6 +116,15 @@
 
   margin: 1rem auto;
   width: 60%;
+  @media only screen and (max-width:50em) {
+    width: 90%;
+  }
+
+  &__text{
+    text-align: center;
+    font-size: 2rem;
+    color: white;
+  }
   &__container{
     position: relative;
     // background-color: yellow;
