--- a/src/app/components/spends-feed/spends-feed.component.scss
+++ b/src/app/components/spends-feed/spends-feed.component.scss
@@ -3,6 +3,12 @@
 .spinner{
   text-align: center;
 }
+.container{
+  position: relative;
+  // background-color: red;
+  min-height: 80vh;
+  width: 100%;
+}
 .add-spend{
   position: fixed;
   bottom: 10%;
@@ -31,16 +37,24 @@
 
 .expense{
   display: flex;
-  margin: 1rem auto;
+  margin: 0rem auto;
   font-size: 2rem;
   background-color: white;
   justify-content: space-between;
   align-items: center;
   padding: 2rem 0;
   width: 70%;
+  cursor: pointer;
+  margin-bottom: 1rem;
   @media only screen and (max-width: 50em) {
    width: 95%;
   } 
+
+  .expense:hover &__edit{
+    i{
+      visibility: visible;
+    }
+  }
   
 
   &__category{
@@ -82,6 +96,78 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    &__amount{
+      border-bottom: solid 1px $color-gray-4;
+      margin-bottom: 1rem;
+      font-weight: bold;
+    }
     
+  }
+  &__edit{
+    margin-right: 2rem;
+    i{
+      visibility: hidden;
+      cursor: pointer;
+      font-size: 3rem;
+      color: $color-primary;
+    }
+  }
+
+}
+.edit{
+  transform: translateX(100%);
+  position: absolute;
+  top: 0;
+  left: 25%;
+  width: 80%;
+  height: 100%;
+  background-color: $color-primary;
+  z-index: 35;
+  transition: all .4s;
+
+  @media only screen and (max-width:50em) {
+    left: 0;
+    width: 100%;
+  }
+
+  &__close-arrow{
+    border-bottom: solid 1px white;
+    display: flex;
+    h5{
+      font-size: 3rem;
+      margin: 1rem 2rem;;
+      color: white;
+    }
+    i{
+      cursor: pointer;
+      font-size: 4rem;
+      color:white;
+      padding: 1rem;
+    }
+  }
+
+  &__form{
+    margin: 3rem auto;
+    border: solid 1px white;
+    width: 80%;
+    padding: 3rem 1rem;
+    &__select{ 
+      h6{
+        color: white;
+        // margin: 1rem 0;
+        font-size: 3rem;
+      }
+      select{
+        
+        border: none;
+        padding: 1rem 1rem;
+        background-color: white;
+        width: 100%;
+        margin: 1rem auto;
+        font-size: 1.5rem;
+
+      }
+    }
   }
 }
