--- a/src/app/components/spends-feed/spends-feed.component.html
+++ b/src/app/components/spends-feed/spends-feed.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 
   <div class="container">
-    
+<app-chart></app-chart>
     <!-- Add spend btn -->
   <div class="add-spend" (click)="addSpendRoute()">
     <div class="add-spend__icon">
