--- a/src/app/components/spends-feed/spends-feed.component.scss
+++ b/src/app/components/spends-feed/spends-feed.component.scss
@@ -117,11 +117,11 @@
 }
 .edit{
   transform: translateX(100%);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 25%;
   width: 80%;
-  height: 100%;
+  height: 100vh;
   background-color: $color-primary;
   z-index: 35;
   transition: all .4s;
