--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,4 +1,4 @@
-// $color-primary: #0074D9;
+$color-blue: #0074D9;
 $color-primary: #8BC34A;
 $color-primary-dark: #519657;
 $color-primary-light: #b2fab4;
