--- a/src/app/components/chart/chart.component.scss
+++ b/src/app/components/chart/chart.component.scss
@@ -1,4 +1,19 @@
-#chart{
- width: 50%;
-
+.pieChart{
+ width: 100%;
+ height: 90vh;
+ text-align: center;
+ h2{
+  font-size: 3rem;
+ }
+  @media only screen and (max-width:50em) {
+   height: 100%;
+  }
+ #chart{
+  width: 40%;
+  margin: 0 auto;
+  @media only screen and (max-width:50em) {
+   width: 100%;
+  }
+ }
+ 
 }
