Minimal footer added. Not finisged yet

--- a/src/app/components/spends-feed/spends-feed.component.html
+++ b/src/app/components/spends-feed/spends-feed.component.html
@@ -58,8 +58,10 @@
     </div>
 
   </section>
+  
+</div>
 
-  <div class="edit">
+  <div class="edit" id="edit">
     <div class="edit__close-arrow">
       <i class="fas fa-arrow-circle-right" (click)="editToggle()"></i>
       <h5>Spend edit</h5>
@@ -98,5 +100,4 @@
       </form>
     </div>
   </div>
-
-</div>
+  <app-footer></app-footer>
