--- a/src/app/components/chart/chart.component.scss
+++ b/src/app/components/chart/chart.component.scss
@@ -1,18 +1,24 @@
+// @import '../../../styles.scss';
+
 .pieChart{
  width: 100%;
- height: 90vh;
+
  text-align: center;
+ margin-bottom: 5rem;
  h2{
   font-size: 3rem;
  }
-  @media only screen and (max-width:50em) {
-   height: 100%;
-  }
+ @media only screen and (max-width:50em) {
+  height: 100%;
+ }
  #chart{
+  // background-color: red;
   width: 40%;
-  margin: 0 auto;
+  margin: 2rem auto;
+  
   @media only screen and (max-width:50em) {
-   width: 100%;
+  width: 100%; 
+   
   }
  }
  
