Google Auth added

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -42,6 +42,8 @@
         <p>Already registered? <span><a class="register-login__form__loginChange__loginLink" (click)="loginRegisterToggler()">Click here </a></span> to log in!</p> 
       </div>  
     </form>
+
+
     
   </section>
 
@@ -77,6 +79,10 @@
           register!</p>
       </div>
     </form>
+
+    <div class="register-login__form__google">
+      <img src="../../../assets/img/google_signin.png" alt="Google Login" (click)="googleLogin()">
+    </div>
   
   </section>
   
