--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -30,6 +30,15 @@
     @media only screen and (max-width:50em) {
       width:100%;
     }
+
+    &__google{
+      // background-color: red;
+      text-align: center;
+      img{
+        width: 15%;
+        cursor: pointer;
+      }
+    }
     
 
     
