--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,13 +1,14 @@
 <div class="footer">
-  <div class="row">
+  
     <div class="footer__container">
-      <div class="footer__title">
-        Spend Monitor by Mate Borkesz
+      <div class="footer__container__title">
+        <h6>Spend Monitor by Mate Borkesz</h6>
       </div>
-      <div class="footer__logos">
-        <!-- <img src="../../../assets/img/angular_logo.png" alt="Angular logo">
-        <img src="../../../assets/img/firebase.png" alt="Firebase logo"> -->
+      <div class="footer__container__img">
+        <img src="../../../assets/img/angular_logo.png" alt="Angular logo">
+        <img src="../../../assets/img/firebase.png" alt="Firebase logo">
       </div>
-    </div>
-  </div>
+    </div>  
+    
+  
 </div>
