Angular material installed and Angular material date picker and date filter functionality added. Final touches are required

--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -37,6 +37,10 @@
       img{
         width: 15%;
         cursor: pointer;
+
+        @media only screen and (max-width:50em) {
+          width: 60%;
+        }
       }
     }
     
