--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,4 +3,5 @@
 @import 'sass/base.scss';
 @import 'sass/utilities.scss';
 @import 'sass/animations.scss';
-@import 'node_modules/angular-notifier/styles.scss'
+@import 'node_modules/angular-notifier/styles.scss';
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
