Box styles modified

--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -55,6 +55,8 @@
       font-size: 2rem;
       border: .2rem white solid;
       border-radius: 2%;
+      border-radius: 12px;
+      box-shadow: 8px 9px 5px -5px rgba(0,0,0,0.15);
 
       &__error-msg{
         color:white;
