--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -3,7 +3,7 @@
 
   <h1>Hi! You are logged in as: {{user.email}}</h1>
 
-  <h2>Select a category</h2>
+  <h2>You can edit your cost categories</h2>
 
 
   <div class="spinner" *ngIf="!isCategoriesLoaded">
