--- a/src/sass/utilities.scss
+++ b/src/sass/utilities.scss
@@ -28,6 +28,8 @@
  border: 2px solid  white;
  transition: all .3s;
  cursor: pointer;
+ border-radius: 12px;
+ box-shadow: 8px 9px 5px -5px rgba(0,0,0,0.15);
   @media only screen and (max-width: 30em) {
   display: block;      
   text-align: center;
@@ -43,6 +45,8 @@
  color:white;
  border: 2px solid  white;
  transition: all .3s;
+ border-radius: 12px;
+ box-shadow: 8px 9px 5px -5px rgba(0,0,0,0.15);
  cursor: pointer;
   @media only screen and (max-width: 30em) {
   display: block;      
@@ -59,6 +63,8 @@
  color:white;
  border: 2px solid  white;
  transition: all .3s;
+ border-radius: 12px;
+ box-shadow: 8px 9px 5px -5px rgba(0,0,0,0.15);
  cursor: pointer;
   @media only screen and (max-width: 30em) {
   display: block;      
@@ -123,6 +129,8 @@
  color:white;
  border: 2px solid  transparent;
  transition: all .3s;
+ border-radius: 12px;
+ box-shadow: 8px 9px 5px -5px rgba(0,0,0,0.15);
   @media only screen and (max-width: 30em) {
   display: block;      
   text-align: center;
