Default date ranges btn added. Not functional yet

--- a/src/app/components/spends-feed/spends-feed.component.html
+++ b/src/app/components/spends-feed/spends-feed.component.html
@@ -70,6 +70,29 @@
       
     </div>
 
+
+    <!-- Default date ranges -->
+
+    <div class="default-range">
+      
+      <div class="default-range__btn">
+        <button class="default-range__all-time" >All time</button>
+      </div>
+
+      <div class="default-range__btn">
+        <button class="default-range__this-month">This month</button>
+      </div>
+
+      <div class="default-range__btn">
+        <button class="default-range__yesterday">Yesterday</button>
+      </div>
+
+      <div class="default-range__btn">
+        <button class="default-range__today">Today</button>
+      </div>
+
+    </div>
+
 <!-- No expenses filter is inactive -->
     <div id="notFiltered" *ngIf="!isFilterActive" >
       <div class="expense"
