--- a/src/app/components/spends-feed/spends-feed.component.scss
+++ b/src/app/components/spends-feed/spends-feed.component.scss
@@ -60,12 +60,17 @@
   width: 70%;
   cursor: pointer;
   text-align: right;
+  mat-datepicker-toggle{
+    font-size: 7rem;
+    
+
+  }
   mat-form-field{
     margin-right: 2rem;
 
     @media only screen and (max-width:50em) {
       margin: 2rem 1rem;
-      width: 100%;
+      width: 90%;
       display: block;
     }
   }
@@ -97,6 +102,7 @@
   }
   button, :focus{
     width: 100%;
+    height: 100%;
     border: none;
     padding: 1rem;
     color: white;
