spendByDate reduce function and a new linechart added

--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -1,3 +1,9 @@
+<div class="lineChart">
+  <h2>Expenses Structure</h2>
+  <div id="lineChart"></div>
+
+</div>
+
 <div class="pieChart">
  <h2>Expenses Structure</h2>
   <div id="chart"></div>
