--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -1,11 +1,14 @@
-<div class="lineChart">
-  <h2>Your daily expenses</h2>
-  <div id="lineChart"></div>
+<div class="chartsContainer">
+  <div class="lineChart">
+    <h2>Your daily expenses</h2>
+    <div id="lineChart"></div>
+  
+  </div>
+  
+  <div class="pieChart">
+   <h2>Expenses Structure</h2>
+    <div id="chart"></div>
+   
+  </div>
 
-</div>
-
-<div class="pieChart">
- <h2>Expenses Structure</h2>
-  <div id="chart"></div>
- 
 </div>
