--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,11 +2,12 @@
   
     <div class="footer__container">
       <div class="footer__container__title">
-        <h6>Spend Monitor by Mate Borkesz</h6>
+        <h6>Spend Monitor by Mate BORKESZ</h6>
       </div>
       <div class="footer__container__img">
         <img src="../../../assets/img/angular_logo.png" alt="Angular logo">
         <img src="../../../assets/img/firebase.png" alt="Firebase logo">
+        <img src="../../../assets/img/ApexCharts.png" alt="Angular logo">
       </div>
     </div>  
     
