--- a/src/app/components/spends-feed/spends-feed.component.scss
+++ b/src/app/components/spends-feed/spends-feed.component.scss
@@ -23,6 +23,11 @@
   background-color: white;
   border-radius: 12px;
   box-shadow: 8px 9px 5px -5px rgba(0,0,0,0.15);
+  text-align: center;
+  font-size: 3rem;
+  span{
+    color: $color-red-primary;
+  }
   @media only screen and (max-width: 50em) {
     width: 95%;
   }
@@ -346,5 +351,19 @@
         margin-right: 2rem;
       }
     }
+  }
+}
+
+.current-date-range{
+  text-align: center;
+  h4{
+    font-size: 3rem;
+    padding: .5rem;
+
+  }
+  h3{
+    font-size: 3rem;
+    padding: .5rem;
+    font-weight: 300;
   }
 }
