Some modification in styling

--- a/src/app/components/add-spend/add-spend.component.html
+++ b/src/app/components/add-spend/add-spend.component.html
@@ -4,7 +4,7 @@
 <div class="container">
 
   <section class="add-spend">
-    
+    <button class="btn-primary" [routerLink]="['/']" routerLinkActive="router-link-active" >Back to homapage</button>
     <div class="title" >
       
       <h2 >Gave away some money?</h2>
